--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,9 +1,18 @@
 <h1>Portfolio Items</h1>
 
+<a href="portfolios/new">Create new item</a>
+<br>
+
+<%= link_to "Create new item", new_portfolio_path %>
+
+<p> <%= new_portfolio_path %></p>
+<p> <%= new_portfolio_url %></p>
+
 <% @portfolio_items.each do |portfolio_item| %>
   <p><%= portfolio_item.title %></p>
   <p><%= portfolio_item.subtitile %></p>
   <p><%= portfolio_item.body %></p>
   <p><%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %></p>
+  <p><%= link_to "edit",  edit_portfolio_path(portfolio_item.id)%></p>
   <hr>
 <% end %>
