--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -9,7 +9,7 @@
 <p> <%= new_portfolio_url %></p>
 
 <% @portfolio_items.each do |portfolio_item| %>
-  <p><%= portfolio_item.title %></p>
+  <h3><%= link_to portfolio_item.title,  portfolio_path(portfolio_item.id)%></h3>
   <p><%= portfolio_item.subtitile %></p>
   <p><%= portfolio_item.body %></p>
   <p><%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %></p>
