--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -9,10 +9,11 @@
 <p> <%= new_portfolio_url %></p>
 
 <% @portfolio_items.each do |portfolio_item| %>
-  <h3><%= link_to portfolio_item.title,  portfolio_path(portfolio_item.id)%></h3>
+  <h3><%= link_to portfolio_item.title, portfolio_path(portfolio_item) %></h3>
   <p><%= portfolio_item.subtitile %></p>
   <p><%= portfolio_item.body %></p>
   <p><%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %></p>
-  <p><%= link_to "edit",  edit_portfolio_path(portfolio_item.id)%></p>
+  <p><%= link_to "edit", edit_portfolio_path(portfolio_item) %></p>
+  <p><%= link_to "Delete", portfolio_path(portfolio_item), method: :delete, data: {confirm: "Are you sure?"} %></p>
   <hr>
 <% end %>
