--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -5,3 +5,12 @@
 <em><%= @portfolio_item.subtitile %></em>
 
 <p><%= @portfolio_item.body %></p>
+
+<h2>Technologies used:</h2>
+<ul>
+<% @portfolio_item.technologies.each do |technology| %>
+    <li>
+      <%= technology.name  %>
+    </li>
+<% end %>
+</ul>
