--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,5 +22,10 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
+
+    <hr>
+    <% if session[:source] %>
+        Thanks for visiting me from <%= session[:source] %>
+    <% end %>
   </body>
 </html>
