--- a/app/views/portfolios/angular.html.erb
+++ b/app/views/portfolios/angular.html.erb
@@ -17,3 +17,7 @@
   <p><%= link_to "Delete", portfolio_path(portfolio_item), method: :delete, data: {confirm: "Are you sure?"} %></p>
   <hr>
 <% end %>
+
+<hr>
+
+<%= params.inspect %>
