--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -28,13 +28,9 @@
     <%= yield %>
 
     <hr>
-    <div>
-      <div><%= link_to "Home", root_path%></div>
-      <div><%= link_to "About me", about_me_path %></div>
-      <div><%= link_to "Contact", contact_path %></div>
-      <div><%= link_to "Blog", blogs_path%></div>
-      <div><%= link_to "Portfolios", portfolios_path%></div>
-    </div>
+
+    <%= render "shared/nav" %>
+
     <hr>
     <% if session[:source] %>
         Thanks for visiting me from <%= session[:source] %>
