partial vewes, send data in it

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -29,7 +29,7 @@
 
     <hr>
 
-    <%= render "shared/nav" %>
+    <%= render "shared/nav", location: 'bottom' %>
 
     <hr>
     <% if session[:source] %>
