--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,5 +1,7 @@
 <h1>New Blog</h1>
 
+<!--Instancna promenljiva @blog se salje u
+lokalnu promenljivu blog-->
 <%= render 'form', blog: @blog %>
 
 <%= link_to 'Back', blogs_path %>
