--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <%= render "shared/nav" %>
+    <%= render "shared/nav", location: 'top' %>
 
     <% if current_user.is_a?(User) %>
       <%= link_to "Logout", destroy_user_session_path, method: :delete %>
