--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -26,7 +26,7 @@
     <%= yield %>
 
     <hr>
-    <%= render "shared/nav" %>
+    <%= render "shared/nav", location: 'bottom' %>
     <hr>
     <% if session[:source] %>
         Thanks for visiting me from <%= session[:source] %>
