--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,35 +1,3 @@
 <h1>Create new portfolio</h1>
 
-<%= form_for(@portfolio_item) do |form| %>
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :subtitile %>
-    <%= form.text_field :subtitile %>
-  </div>
-
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
-  </div>
-
-  <ul>
-    <%= form.fields_for :technologies do |technology_form| %>
-      <li>
-        <%= technology_form.label :name %>
-        <%= technology_form.text_field :name %>
-      </li>
-    <% end %>
-  </ul>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
-
-<hr>
-
-<%= params.inspect %>
+<%= render 'form', portfolio_item: @portfolio_item %>
