implemented content tag helper methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,7 @@
     <%= yield %>
 
     <hr>
-    <% if session[:source] %>
-        Thanks for visiting me from <%= session[:source] %>
-    <% end %>
+    <%= source_helper("application") %>
 
     <hr>
     <%= current_user.class %>
