--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -22,8 +22,6 @@
     <hr>
     <%= render "shared/nav", location: 'bottom' %>
     <hr>
-    <% if session[:source] %>
-        Thanks for visiting me from <%= session[:source] %>
-    <% end %>
+    <%= source_helper("application") %>
   </body>
 </html>
