--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,3 +8,13 @@
 
 <h2>Skills</h2>
 <%= @skills.inspect %>
+
+<hr>
+
+<%= content_tag :p, class: "my-special-class" do %>
+  Hi, I'm in a paragraph tag.
+<% end %>
+
+<p class="my-special-class">Hi, I'm in a paragraph tag.</p>
+
+<%= sample_helper %>
