--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,11 @@
 <h1>Pages#contact</h1>
 <p>Find me in app/views/pages/contact.html.erb</p>
+
+<p><%= number_to_phone "1234567890123" %></p>
+
+<p><%= number_to_currency "10546540" %></p>
+
+<p><%= number_to_percentage "80.126" %>
+<p><%= number_to_percentage "80" %></p>
+
+<p><%= number_with_delimiter "123456789" %></p>
