custom gem user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,5 +27,8 @@
     <hr>
     <%= current_user.class %>
     <%= current_user %>
+
+    <hr>
+    <%= generate_copyright_generator %>
   </body>
 </html>
