--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -2,6 +2,6 @@
 <p><%= portfolio_item.subtitile %></p>
 <p><%= portfolio_item.body %></p>
 <p><%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %></p>
-<p><%= link_to "edit", edit_portfolio_path(portfolio_item) %></p>
-<p><%= link_to "Delete", portfolio_path(portfolio_item), method: :delete, data: {confirm: "Are you sure?"} %></p>
+<p><%= link_to "edit", edit_portfolio_path(portfolio_item) if logged_in?(:site_admin) %></p>
+<p><%= link_to "Delete", portfolio_path(portfolio_item), method: :delete, data: {confirm: "Are you sure?"} if logged_in?(:site_admin) %></p>
 <hr>
