updated styles and added map for contact page

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,11 +1,19 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h4><b>Would you like to work together?</b></h4>
 
-<p><%= number_to_phone "1234567890123" %></p>
 
-<p><%= number_to_currency "10546540" %></p>
-
-<p><%= number_to_percentage "80.126" %>
-<p><%= number_to_percentage "80" %></p>
-
-<p><%= number_with_delimiter "123456789" %></p>
+<table align="right">
+  <tr>
+    <td>
+      <h6><b>Office Address</b></h6>
+      <p>Sarajvska 11, 11000 Belgrade, Serbia</p>
+      <h6><b>Phone</b></h6>
+      <p><%= number_to_phone "+381 643452431" %></p>
+      <h6><b>email</b></h6>
+      <p><a href="mailto:milos.antic.07104@gmail.com?subject=Contact">milos.antic.07104@gmail.com</a></p>
+    </td>
+    <td>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2830.8144682890597!2d20.45456475115957!3d44.80496958510546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a700764f240a3%3A0xa4cc19f89746cae5!2z0KHQsNGA0LDRmNC10LLRgdC60LAgMTEsINCR0LXQvtCz0YDQsNC0IDExMDAw!5e0!3m2!1ssr!2srs!4v1568639800879!5m2!1ssr!2srs"
+              width="400" height="400" frameborder="0" style="border:px;" allowfullscreen=""></iframe>
+    </td>
+  </tr>
+</table>
