--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="card">
   <div class="card-body">
     <div class="row">
@@ -41,7 +39,7 @@
             <%= f.password_field :current_password, class: "form-control" %>
           </div>
 
-          <div class="actions">
+          <div class="form-group">
             <%= f.submit "Update", class: "btn btn-primary" %>
           </div>
         <% end %>
