Integrated styles for Blog pages - View, New

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,13 +1,9 @@
 <div class="col-sm-8 blog-main">
   <p id="notice"><%= notice %></p>
 
-  <p>
-    <strong>Title:</strong>
-    <%= @blog.title %>
-  </p>
+  <h2><%= @blog.title %></h2>
 
   <p>
-    <strong>Body:</strong>
     <%= @blog.body %>
   </p>
 
