--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,7 +1,9 @@
-<h1>New Blog</h1>
+<div class="col-sm-8 blog-main">
+  <h1>New Blog</h1>
 
-<!--Instancna promenljiva @blog se salje u
-lokalnu promenljivu blog-->
-<%= render 'form', blog: @blog %>
+  <!--Instancna promenljiva @blog se salje u
+  lokalnu promenljivu blog-->
+  <%= render 'form', blog: @blog %>
 
-<%= link_to 'Back', blogs_path %>
+  <%= link_to 'Back', blogs_path %>
+</div>
