implemented initial design for portfolios index page - ne valja mi malo layout

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,17 +1,13 @@
 <h1>Portfolio Items</h1>
 
-<!---
-<a href="portfolios/new">Create new item</a>
---->
-<br>
-
 <%= link_to "Create new item", new_portfolio_path  if logged_in?(:site_admin)%>
 
-<p> <%= new_portfolio_path %></p>
-<p> <%= new_portfolio_url %></p>
+<div class="album text-muted">
+  <div class="container">
+    <div class="row">
 
-<%= render partial: 'portfolio_item', collection: @portfolio_items%>
+    <%= render partial: 'portfolio_item', collection: @portfolio_items%>
 
-<hr>
-
-<%= params.inspect %>
+    </div>
+  </div>
+</div>
