--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,7 +1,13 @@
-<h3><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></h3>
-<p><%= portfolio_item.subtitile %></p>
-<p><%= portfolio_item.body %></p>
-<p><%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %></p>
-<p><%= link_to "edit", edit_portfolio_path(portfolio_item) if logged_in?(:site_admin) %></p>
-<p><%= link_to "Delete", portfolio_path(portfolio_item), method: :delete, data: {confirm: "Are you sure?"} if logged_in?(:site_admin) %></p>
-<hr>
+<div class="card">
+  <%= image_tag(portfolio_item.thumb_image, alt:"Card image cap") if !portfolio_item.thumb_image.nil? %>
+  <p class="card-text">
+
+    <span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></span>
+    <span><%= portfolio_item.subtitile %></span>
+    <span><%= portfolio_item.body %></span>
+    <p><%= link_to "edit", edit_portfolio_path(portfolio_item) if logged_in?(:site_admin) %></p>
+    <p><%= link_to "Delete", portfolio_path(portfolio_item), method: :delete, data: {confirm: "Are you sure?"} if logged_in?(:site_admin) %></p>
+  </p>
+</div>
+
+
