--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=10, shrink-to-fit=no">
 
     <title> <%= @page_title %></title>
 
@@ -18,28 +18,17 @@
   <body>
     <%= render "shared/portfolio_nav" %>
 
-
 <!--  start of masthead-->
-    <section class="jumbotron text-center">
-      <div class="container">
-        <h1 class="jumbotron-heading">Album example</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-        <p>
-          <a href="#" class="btn btn-primary">Main call to action</a>
-          <a href="#" class="btn btn-secondary">Secondary action</a>
-        </p>
-      </div>
-    </section>
+    <%= render "shared/portfolio_masthead" %>
 <!--  end of masthead-->
 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <%= render "shared/nav", location: 'bottom' %>
-
-    <%= login_helper %>
     <%= yield %>
 
     <%= source_helper("application") %>
+
+    <%= render "shared/portfolio_footer" %>
   </body>
 </html>
