--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,29 +1,24 @@
-<%= image_tag @portfolio_item.main_image %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7">
+      <%= image_tag @portfolio_item.main_image %>
+    </div>
+    <div class="col-md-5">
+      <h1> <%= @portfolio_item.title %></h1>
 
-<h1> <%= @portfolio_item.title %></h1>
+      <hr>
 
-<em><%= @portfolio_item.subtitile %></em>
+      <em><%= @portfolio_item.subtitile %></em>
+      <p><%= @portfolio_item.body %></p>
 
-<p><%= @portfolio_item.body %></p>
+      <hr>
 
-<h2>Technologies used:</h2>
-<ul>
-<% @portfolio_item.technologies.each do |technology| %>
-    <li>
-      <%= technology.name  %>
-    </li>
-<% end %>
-</ul>
+      <h3>Technologies used:</h3>
+      <% @portfolio_item.technologies.each do |technology| %>
+          <p><%= technology.name  %></p>
+      <% end %>
+    </div>
+  </div>
+</div>
 
-<hr>
 
-<%= params.inspect %>
-
-<hr>
-
-<%= session[:source].inspect %>
-
-<hr>
-<% if session[:source] %>
-  Thanks for visiting me from <%= session[:source] %>
-<% end %>
