added styles to Blogs edit and new forms

--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,33 +1,36 @@
 <%= form_for(portfolio_item) do |form| %>
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
+  <div class="row">
+    <div class="col-md-5">
+      <div class="form-group">
+        <%= form.label :title %>
+        <%= form.text_field :title, class: "form-control" %>
+      </div>
 
-  <div class="field">
-    <%= form.label :subtitile %>
-    <%= form.text_field :subtitile %>
-  </div>
+      <div class="form-group">
+        <%= form.label :subtitile %>
+        <%= form.text_field :subtitile, class: "form-control" %>
+      </div>
 
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
-  </div>
+      <hr>
+      <h2>Technologies used</h2>
+      <div>
+        <%= form.fields_for :technologies do |technology_form| %>
+          <div class="form-group">
+            <%= technology_form.label :name %>
+            <%= technology_form.text_field :name, class: "form-control" %>
+          </div>
+        <% end %>
+      </div>
 
-  <ul>
-    <%= form.fields_for :technologies do |technology_form| %>
-      <li>
-        <%= technology_form.label :name %>
-        <%= technology_form.text_field :name %>
-      </li>
-    <% end %>
-  </ul>
-
-  <div class="actions">
-    <%= form.submit %>
+      <div class="form-group">
+        <%= form.submit "Save Portfolio Item", class: "btn btn-primary btn-block" %>
+      </div>
+    </div>
+    <div class="col-md-7">
+      <div class="form-group">
+        <%= form.label :body %>
+        <%= form.text_area :body, class: "form-control", rows: "22" %>
+      </div>
+    </div>
   </div>
 <% end %>
-
-<hr>
-
-<%= params.inspect %>
