--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -214,3 +214,8 @@ body {
   box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1);
   font-weight: 700;
 }
+
+.app-nav span{
+  margin-left: 10px;
+  margin-right:10px;
+}
