--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -8,7 +8,7 @@
 
       <div class="form-group">
         <%= form.label :subtitile %>
-        <%= form.text_field :subtitile, class: "form-control" %>
+        <%= form.text_field :subtitile, class: "form-control datepicker" %>
       </div>
 
       <hr>
